# PrayerWay

./: Cargo.toml  README.md  build.rs
.github/workflows/: build-release.yml
src/: main.rs
